--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>AR Model Viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
-<body>
+<body style="color:Black;">
   <model-viewer 
     src="ar-model.glb" 
     ar 
     camera-controls 
     auto-rotate 
-    style="width: 100%; height: 100vh;">
+    style="width: 100vh; height: 100vh;">
   </model-viewer>
 </body>
 </html>
